--- a/04_05/style.css
+++ b/04_05/style.css
@@ -10,6 +10,7 @@ button {
   background: none;
 }
 
+/* a reset of the default button style */
 button:hover {
   /* Mouse behavior like link */
   cursor: pointer;
@@ -21,4 +22,30 @@ button:active {
   background: none;
   border-color: inherit;
   border-radius: 0;
+}
+
+
+/*xbi styling */
+button:focus {
+  outline: 1px dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+/* write a bootstrap style button style */
+button {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  background: navy;
+  color: white;
 }
